<resources>
    <string name="app_name">DO</string>

    <string name="create_your_account">Создай свой аккаунт</string>
    <string name="log_in">Вход в аккаунт</string>
    <string name="login">Имя пользователя</string>
    <string name="email">Эл. почта</string>
    <string name="password">Пароль</string>
    <string name="are_you_registering">Вы регистрируетесь?</string>
    <string name="login_checkbox_text">Запомнить</string>
    <string name="next">Далее</string>
    <string name="i_already_have_an_account">Уже есть аккаунт</string>
    <string name="i_do_not_have_an_account">Нет аккаунта</string>
    <string name="text_login_2">Мы отправили код на указанную почту. Введите его в поле ниже</string>
    <string name="code">pG13j78</string>
    <string name="or_enter_by_header">Или войди через соцсети:</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="main_page_habits">Привычки</string>
    <string name="main_page_tasks">Задачи</string>
    <string name="main_page_character">Персонаж</string>
    <string name="health">Здоровье</string>
    <string name="experience">Опыт</string>
    <string name="level">Уровень</string>
    <string name="save">Сохранить</string>
    <string name="creating_habit">Создание привычки</string>
    <string name="habit_name">Название привычки</string>
    <string name="notes">Заметки</string>
    <string name="good_habit">Хорошая привычка</string>
    <string name="bad_habit">Вредная привычка</string>
    <string name="difficulty">Сложность</string>
    <string name="mark_as_done">Отметить, как выполненную</string>
    <string name="how_often_to_do">Как часто выполнять?</string>
    <string name="everyday">Ежедневно</string>
    <string name="everyweek">Еженедельно</string>
    <string name="everymonth">Ежемесячно</string>
    <string name="simple">Просто</string>
    <string name="easy">Легко</string>
    <string name="normal">Нормально</string>
    <string name="hard">Сложно</string>
    <string name="dos">Задачи, привычки и магазин</string>
    <string name="inventory">Инвентарь</string>
    <string name="avatar">Аватар</string>
    <string name="show_teachers">Ваши учителя</string>
    <string name="find_teachers">Найти нового учителя</string>
    <string name="find_by_login">Поиск по логину</string>
    <string name="show_students">Ваши ученики</string>
    <string name="study_requests">Запросы в ученики</string>
    <string name="news">Новости</string>
    <string name="news_header">Новости Do</string>
    <string name="more">Подробнее</string>
    <string name="market">Магазин</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="is_save_changes">Сохранить изменения, прежде чем выйти?</string>
    <string name="new_list_element">Новый пункт списка</string>
    <string name="list">Список</string>
    <string name="buy">Купить</string>
    <string name="wear">Надеть</string>
    <string name="is_change_avatar">Вы хотите изменить аватар?</string>

    <string name="body"> Тело </string>
    <string name="hair"> Волосы </string>
    <string name="eyes"> Глаза </string>
    <string name="mouth"> Рот </string>
    <string name="background"> Фон </string>

    <string name="abandon"> Отказаться </string>
    <string name="assignments"> Поручения </string>
    <string name="request"> Попроситься </string>
    <string name="accept"> Принять </string>
    <string name="habits"> Привычки </string>
    <string name="tasks"> Задачи </string>

    <string name="are_you_sure_to_abandon_teacher">
        Вы уверены, что хотите отказаться от этого учителя?
    </string>
    <string name="are_you_sure_to_abandon_student">
        Вы уверены, что хотите отказаться от этого ученика?
    </string>

    <string name="avatar_is_ready_string">
        Поздравляю персонаж готов! Пришло время придумать ему имя.
    </string>

    <string name="your_teachers"> Ваши учителя </string>
    <string name="your_assignments_from"> Ваши поручения от </string>
    <string name="your_assignments_for"> Ваши поручения для </string>

    <string name="ok"> ОК </string>
    <string name="title_activity_one_news_page">OneNewsPage</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>

</resources>