<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="248dp"
    android:layout_height="122dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.SaveChangesDialogue"
    android:background="@drawable/card_save_changes">

    <View
        android:id="@+id/close_button"

        android:layout_width="24dp"
        android:layout_height="24dp"

        android:layout_marginTop="9dp"
        android:layout_marginEnd="9dp"
        android:background="@drawable/blue_close"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:layout_width="200dp"
        android:layout_height="wrap_content"

        android:layout_marginTop="24dp"
        android:layout_marginStart="24dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        style="@style/text_style"
        android:text="@string/is_save_changes"


        />

    <View
        android:id="@+id/yes_button"

        android:layout_width="89dp"
        android:layout_height="24dp"

        android:layout_marginTop="74dp"
        android:layout_marginStart="24dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        android:background="@drawable/save_changes_yes_button"

        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"


        app:layout_constraintTop_toTopOf="@+id/yes_button"
        app:layout_constraintStart_toStartOf="@+id/yes_button"
        app:layout_constraintEnd_toEndOf="@+id/yes_button"
        app:layout_constraintBottom_toBottomOf="@+id/yes_button"



        style="@style/simple_white_text"
        android:text="@string/yes"

        />



    <View
        android:id="@+id/no_button"

        android:layout_width="89dp"
        android:layout_height="24dp"

        android:layout_marginTop="74dp"
        android:layout_marginStart="135dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        android:background="@drawable/save_changes_no_button"

        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"


        app:layout_constraintTop_toTopOf="@+id/no_button"
        app:layout_constraintStart_toStartOf="@+id/no_button"
        app:layout_constraintEnd_toEndOf="@+id/no_button"
        app:layout_constraintBottom_toBottomOf="@+id/no_button"

        style="@style/simple_white_text"
        android:text="@string/no"

        />



</androidx.constraintlayout.widget.ConstraintLayout>